Refactor WorkspaceService: reemplazar excepciones genéricas por excepciones específicas (ProjectNotFoundException, WorkspaceNotFoundException) para mejorar el manejo de errores; agregar clase WorkspaceNotFoundException.